Update and rename new.html to index.html

--- a/index.html
+++ b/index.html
@@ -176,34 +176,34 @@ section {
 		<a href="#" ><div class="ball">Japan</div></a>
 		<section>
 			<div class="set">
-				<div><img src="../html/index/blossom2.png" width="110px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom2.png" width="110px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="50px"></div>
-				<div><img src="../html/index/blossom2.png" width="100px"></div>
+				<div><img src="blossom2.png" width="110px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom2.png" width="110px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="50px"></div>
+				<div><img src="blossom2.png" width="100px"></div>
 			</div>
 			<div class="set set2">
-				<div><img src="../html/index/blossom2.png" width="110px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom2.png" width="110px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="50px"></div>
-				<div><img src="../html/index/blossom2.png" width="100px"></div>
+				<div><img src="blossom2.png" width="110px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom2.png" width="110px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="50px"></div>
+				<div><img src="blossom2.png" width="100px"></div>
 			</div>
 			<div class="set set3">
-				<div><img src="../html/index/blossom2.png" width="110px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom2.png" width="110px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="40px"></div>
-				<div><img src="../html/index/blossom1.png" width="50px"></div>
-				<div><img src="../html/index/blossom2.png" width="100px"></div>
+				<div><img src="blossom2.png" width="110px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom2.png" width="110px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="40px"></div>
+				<div><img src="blossom1.png" width="50px"></div>
+				<div><img src="blossom2.png" width="100px"></div>
 			</div>
 
 		</section>
